test/should_fail/arrays_empty.cl
MAIN() 
	myIntArr := []
	x := 5
